2003-10-16  Paul Eggert  <eggert@twinsun.com>

	* getgroups.c: Include <errno.h>, <stdlib.h>.
	(getgroups): First arg is int, not size_t.
	Don't let 'free' mangle errno.

2003-10-16  Jim Meyering  <jim@meyering.net>

	* xmalloc.c: Include <string.h>, for declarations of memset and memcpy.

2003-10-15  Paul Eggert  <eggert@twinsun.com>

	* exclude.c: Do not include <inttypes.h> or <stdint.h>.
	(SIZE_MAX): Remove.
	(new_exclude, add_exclude_file): Initial size no longer needs to
	be a power of 2.
	(add_exclude, add_exclude_file): Use xnrealloc instead of rolling
	our own address arithmetic overflow checking.

	* fnmatch.c (SIZE_MAX): Define if standard headers don't.
	(fnmatch): Do not alloca more than 2000 wide characters;
	instead, use malloc for large buffers.
	Check for address arithmetic overflow, and return -1
	with errno set to ENOMEM in that case.
	* fnmatch_loop.c (ALLOCA_LIMIT): New macro.
	(NEW_PATTERN): Do not alloca more than 8000 bytes;
	instead, return -1.  Check for address arithmetic overflow.

2003-10-14  Paul Eggert  <eggert@twinsun.com>

	Handle invalid suffixes and overflow independently, so that
	callers can treat them independently as needed.  Fix some bugs in
	suffix handling, e.g., "100k@" was not diagnosed as an invalid
	suffix for a human-readable blocksize.  The major caller-visible
	change is the addition of a new
	LONGINT_INVALID_SUFFIX_CHAR_WITH_OVERFLOW enum value, indicating
	that both overflow and suffix chars were found.

	* human.c (humblock): Don't check separately for invalid suffix
	char; that is xstrtoumax's job (now that its bug is fixed).
	* xstrtoimax.c (STRTOL_T_MINIMUM, STRTOL_T_MAXIMUM) [defined
	INTMAX_MAX]: New macros.
	* xstrtol.c (STRTOL_T_MINIMUM, STRTOL_T_MAXIMUM, TYPE_MINIMUM,
	TYPE_MAXIMUM): New macros.
	(bkm_scale, bkm_scale_by_power): Return strtol_error, not int.
	(bkm_scale, bkm_scale_by_power, __xstrtol): Return maximal values
	if overflow occurs, as it's what __strtol does and it's more useful
	in practice.