@@ -1,3 +1,7 @@
+2003-10-19  Jim Meyering  <jim@meyering.net>
+
+	* vasnprintf.c (vasnprintf): Work around losing snprintf on HPUX 10.20.
+
 2003-10-16  Paul Eggert  <eggert@twinsun.com>
 
 	* getgroups.c: Include <errno.h>, <stdlib.h>.
